welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:9: error: not enough arguments for method faireMotif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    faireMotif()
              ^MethodsPicture:12: error: not enough arguments for method faireMotif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  faireMotif()
            ^MethodsPicture:25: error: reassignment to val
    case 1 => c = Color.YELLOW
                ^MethodsPicture:26: error: reassignment to val
    case 2 => c = Color.RED
                ^MethodsPicture:27: error: reassignment to val
    case 3 => c = Color.BLUE
                ^MethodsPicture:28: error: reassignment to val
    case 4 => c = Color.GREEN
                ^